--- a/notebook/user_satisfaction.ipynb
+++ b/notebook/user_satisfaction.ipynb
@@ -1225,6 +1225,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_satisfied_customers.to_csv('../data/satisfaction_metrics.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
